# Flamehaven-Filesearch

./: .gitattributes  .gitignore  .gitleaks.toml  .slopconfig.yaml  CHANGELOG.md  DEPLOYMENT_GUIDE_v1.2.0.md  Dockerfile  FLAMEHAVEN_FILESEARCH_UPDATE_SUMMARY_20251215.md  Flamehaven-Filesearch_audit_report.md  INSPECTION_CHECKLIST.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  ROADMAP.md  SECURITY.md  SPICY_REVIEW_REPORT_v1.3.1.md  TESTING.md  TOMB.md  UPGRADING.md  eval_self.py  pyproject.toml  pytest.fast.ini  pytest.ini  requirements.txt  serve.py
.github/workflows/: ci.yml  doc-drift.yml  publish.yml  security.yml
docs/: PERFORMANCE_BASELINE.md  PGVECTOR_TUNING.md  QUALITY_GATE_DOGFOOD.md  V1.4.1_IMPLEMENTATION_SUMMARY.md
docs/history/: Flamehaven-Filesearch_Final_Audit_Report_20251216.md  Flamehaven-Filesearch_Improvement_Report_20251216.md  Flamehaven-Filesearch_v1.6.3_Patch_Technical_Audit_20260516.md
docs/wiki/: API_Reference.md  Architecture.md  Benchmarks.md  Configuration.md  Document_Parsing.md  Flamehaven-Filesearch_Evolution_Blueprint.md  Framework_Integrations.md  Gravitas_DSP_Engine.md  Hybrid_Search.md  Obsidian_Light_Mode.md  Production_Deployment.md  README.md  Release_and_Tagging.md  Roadmap.md  Troubleshooting.md
examples/: api_example.py  basic_usage.py
flamehaven_filesearch/: __init__.py  _ingest.py  _search_cloud.py  _search_local.py  admin_routes.py  api.py  auth.py  batch_routes.py  cache.py  config.py  core.py  dashboard.py  logging_config.py  metrics.py  middlewares.py  multimodal.py  oauth.py  persistence.py  quantizer.py  security.py  storage.py  usage_middleware.py  usage_tracker.py  validators.py  vector_store.py  ws_routes.py
flamehaven_filesearch/engine/: __init__.py  chronos_grid.py  context_extractor.py  embedding_generator.py  embedding_generator_legacy.py  file_parser.py  format_backends.py  format_parsers.py  gravitas_pack.py  hybrid_search.py  intent_refiner.py  knowledge_atom.py  lang_processor.py  llm_providers.py  obsidian_lite.py  parse_cache.py  quality_gate.py  query_expansion.py  text_chunker.py
flamehaven_filesearch/integrations/: __init__.py  docling_loaders.py
frontend/dashboard/: admin.html  cache.html  landing.html  metrics.html  search.html  upload.html
scripts/: monitoring_check.py
tests/: conftest.py  run_all_tests.py  run_tests.py  test_admin_cache.py  test_admin_routes_comprehensive.py  test_api.py  test_api_additional.py  test_api_integration.py  test_auth.py  test_auth_comprehensive.py  test_batch_routes_unit.py  test_cache_redis.py  test_core.py  test_core_comprehensive.py  test_core_engines.py  test_e2e_workflow.py  test_encryption_service.py  test_engine_comprehensive.py  test_engine_extra_coverage.py  test_engine_utils_comprehensive.py  test_frontend_backend.py  test_gravitas_cache_integration.py  test_hybrid_bm25_knowledge_atom.py  test_ingest_comprehensive.py  test_integrations_comprehensive.py  test_llm_providers_comprehensive.py  test_metrics_core_cli.py  test_minimal_import.py  test_misc_coverage.py  test_multimodal_comprehensive.py  test_obsidian_light.py  test_performance.py  test_performance_benchmark.py  test_persistence_comprehensive.py  test_phase1_parse_cache_context.py  test_phase2_format_backends.py  test_postgres_backend.py  test_quality_gate.py  test_quality_gate_integration.py  test_quantizer.py  (+15 more)
tools/: drift_validator.py  obsidian_light_probe.py  report_health_checker.py  report_summary_generator.py  slop_detector.py  verify_semantic_core.py  watch_ingest.py
uiux/admin/rbac_panel/: code.html
uiux/cache/redis_monitor/: code.html
uiux/landingdashboard/: code.html
uiux/metrics/health_overview/: code.html
uiux/searchconsole/: code.html
uiux/upload/index_files/: code.html
