[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flamehaven-filesearch"
version = "1.6.1"
description = "FLAMEHAVEN FileSearch - Open source semantic document search with multi-provider LLM support (Gemini, OpenAI, Claude, Ollama)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "FLAMEHAVEN", email = "info@flamehaven.space"},
]
keywords = [
    "flamehaven",
    "file-search",
    "document-search",
    "RAG",
    "gemini",
    "google-ai",
    "openai",
    "anthropic",
    "claude",
    "ollama",
    "gemma",
    "qwen",
    "local-llm",
    "file-retrieval",
    "semantic-search",
    "document-parsing",
    "langchain",
    "llamaindex",
    "haystack",
    "crewai",
    "text-extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "python-json-logger>=2.0.0",
    "cachetools>=5.3.0",
    "prometheus-client>=0.19.0",
    "PyJWT>=2.8.0",
]
vector = [
    "hnswlib>=0.8.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.5",
]
vision = [
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "httpx>=0.24.1",
    "numpy>=1.24.0",
]
google = [
    "google-genai>=0.2.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.20.0",
]
ollama = [
    "httpx>=0.24.0",
]
parsers = [
    "pymupdf>=1.23.0",        # PDF extraction (primary)
    "pypdf>=4.0.0",           # PDF extraction (fallback, pure Python)
    "python-docx>=1.1.0",     # DOCX extraction
    "olefile>=0.47",          # HWP 5.x extraction (OLE container)
    "openpyxl>=3.1.0",        # XLSX extraction
    "python-pptx>=0.6.23",    # PPTX extraction
    "striprtf>=0.0.26",       # RTF extraction
]
multilingual = [
    "langdetect>=1.0.9",
    "jieba>=0.42.1",
]
security = [
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
langchain = [
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
haystack = [
    "haystack-ai>=2.0.0",
]
crewai = [
    "crewai>=0.1.0",
]
all = [
    "flamehaven-filesearch[api,dev,google,openai,anthropic,ollama,vector,postgres,vision,parsers,multilingual,langchain,llamaindex,haystack,crewai]",
]

[project.urls]
Homepage = "https://github.com/flamehaven01/Flamehaven-Filesearch"
Documentation = "https://github.com/flamehaven01/Flamehaven-Filesearch#readme"
Repository = "https://github.com/flamehaven01/Flamehaven-Filesearch"
"Bug Tracker" = "https://github.com/flamehaven01/Flamehaven-Filesearch/issues"

[project.scripts]
flamehaven-api = "flamehaven_filesearch.api:main"

[tool.setuptools]
packages = ["flamehaven_filesearch", "flamehaven_filesearch.engine", "flamehaven_filesearch.integrations"]

[tool.setuptools.package-data]
flamehaven_filesearch = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=flamehaven_filesearch --cov-report=term-missing"
markers = [
    "integration: integration tests requiring external services",
    "slow: long-running tests",
    "fast: quick unit tests",
]

[tool.coverage.run]
source = ["flamehaven_filesearch"]
omit = [
    "tests/*",
    "examples/*",
    "flamehaven_filesearch/dashboard.py",    # UI/HTML generation
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
